--- a/_config.yml
+++ b/_config.yml
@@ -1,23 +1,23 @@
 # ----
 # Site
 
-title: Edition Template
-url: "https://long-pig.cloudvent.net"
+title: Nexd Engineering
+url: "www.nexd.io"
 baseurl:
 google_analytics_key:
 show_full_navigation: true
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product documentation template for Jekyll.
-author:
-  name:
-  email:
-  twitter: # twitter username without the @ symbol
-social:
-  name: Edition Template
-  links:
-    - https://github.com/CloudCannon/edition-jekyll-template
+description: Product documentation Nexd Engineering
+# author:
+#   name:
+#   email:
+#   twitter: # twitter username without the @ symbol
+# social:
+#   name: Edition Template
+#   links:
+#     - https://github.com/CloudCannon/edition-jekyll-template
 
 # -----
 # Build
@@ -71,3 +71,5 @@ defaults:
 types:
   - minor
   - major
+  
+markdown: kramdown
