--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # ----
 # Site
 
-title: Edition Template
+title: Nexd Engineering
 url: "https://long-pig.cloudvent.net"
 baseurl:
 google_analytics_key:
@@ -9,15 +9,15 @@ show_full_navigation: true
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product documentation template for Jekyll.
+description: Product documentation Nexd Public Projects.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Edition Template
+  name: Nexd Home Page
   links:
-    - https://github.com/CloudCannon/edition-jekyll-template
+    - https://www.nexd.io
 
 # -----
 # Build
